Changing wrap of main scoreboard back to nowrap It Doesn't seem to cause issues with firefox anymore

--- a/css/tablechamp.css
+++ b/css/tablechamp.css
@@ -694,7 +694,7 @@ body {
     line-height: 24px;
     margin: 1% 0 0;
     /* white-space: nowrap; */
-    white-space: normal;
+    white-space: nowrap;
     width: 100%; }
     .top-rankings .ranking .movement {
       font-size: 18px;
